Added Profile page

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="header">
               <ul class="nav nav-pills pull-right">
-                <li class="nav-link"><a href="#">Profile</a></li>
+                <li class="nav-link"><a href="profile.html">Profile</a></li>
                 <li class="nav-link"><a href="#">Login</a></li>
               </ul>
               <h3 class="text-muted"><a href="">Concat</a></h3>
@@ -105,9 +105,9 @@
                   <li class="nav-link col-md-6 col-sm-6"><a href="#">Contact Us</a></li>
               </div>
               <div class="col-md-4">
-              <li class="nav-link col-md-4 col-sm-4"><a href="#"><span class='fa fa-2x fa-google-plus-square'></span></a></li>
-                  <li class="nav-link col-md-4 col-sm-4"><a href="#"><span class='fa fa-2x fa-linkedin-square'></span></a></li>
-                  <li class="nav-link col-md-4 col-sm-4"><a href="#"><span class='fa fa-2x fa-facebook-square'></span></a></li>
+              <li class="nav-link col-md-4 col-sm-4 col-xs-4"><a href="#"><span class='fa fa-2x fa-google-plus-square'></span></a></li>
+                  <li class="nav-link col-md-4 col-sm-4 col-xs-4"><a href="#"><span class='fa fa-2x fa-linkedin-square'></span></a></li>
+                  <li class="nav-link col-md-4 col-sm-4 col-xs-4"><a href="#"><span class='fa fa-2x fa-facebook-square'></span></a></li>
               </div>
               <div class="col-md-4">
                   <li class="nav-link"><a href="#">copyright 2015 SIL pvt Ltd</a></li>
