Added filters page. Changed the background images. Changed the cards. cards as a seperate scss

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               </ul>
               <h3 class="text-muted"><a href="">Concat</a></h3>
             </div>
-            <div class="form-group">
+            <div class="form-group search-bar-main">
                 <h3 class='concat-details'>150+ Conferences, 100+ Locations! Stay Informed</h3>
                 <div class="col-md-5 col-sm-4 ">
                     <input type="text" class="form-control" id="" placeholder="Engineering Domain">
@@ -42,7 +42,7 @@
                     <input type="text" class="form-control" id="" placeholder="State">
                 </div>
                 <div class="col-md-2 col-sm-4 ">
-                    <input type="submit" class="btn search form-control" value= 'Search' id="" placeholder="Search">
+                    <a type="submit" class="btn search form-control" value= 'Search' href="search.html" id="" placeholder="Search">Search</a>
                 </div>
             </div>
         </div>
@@ -86,13 +86,13 @@
     <div class="row standout">
         <div class="container">
             <div class="col-md-4 col-sm-4">
-                <img src="./images/standout1.png" class='img-circle' alt="" />
+                <img src="./images/standout3.png" class='img-circle' alt="" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
             <div class="col-md-4 col-sm-4">
-                <img src="./images/standout2.png" class='img-circle' alt="" />
+                <img src="./images/standout3.png" class='img-circle' alt="" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
             <div class="col-md-4 col-sm-4">
-                <img src="./images/standout1.png" class='img-circle' alt="" />
+                <img src="./images/standout3.png" class='img-circle' alt="" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
         </div>
     </div>
