--- a/app/search.html
+++ b/app/search.html
@@ -51,32 +51,68 @@
 
         <!-- Contents go here-->
         <div class="container-fluid">
-            <div class="row profile-navbar">
-                <div class="col-md-offset-8 col-sm-offset-6 col-md-1 col-sm-2 profile-nav-top active"><a href="#">Navigation</a></div>
-                <div class="col-md-1 col-sm-2 profile-nav-top"><a href="#">Navigation</a></div>
-                <div class="col-md-1 col-sm-2 profile-nav-top"><a href="#">Navigation</a></div>
-            </div>
             <div class="row">
-                <div class="col-md-3 col-sm-4 profile-nav-left">
-                    <div class="row">
-                        <div class="profile-image col-md-6">
-                            <img src="./images/profile.jpg" class="img-circle" alt="profile image" />
+                <div class="col-md-3 col-sm-4">
+                    <div class="filter-container">
+                        <div class="filter-title">
+                            <h3>Update Filter</h3>
                         </div>
-                        <div class='col-md-6'>
-                            <h4 class="profile-name">
-                                Deepak Puthraya
-                            </h4>
+                        <div class="filters">
+                            <h5>Navigation Header</h5>
+                            <div class="input-group">
+                              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                              <span class="input-group-addon"><i class=" glyphicon glyphicon-search"></i></span>
+                            </div>
+                            <ul>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="menu">
-                        <h5><a href="#">Menu OPtion</a></h5>
-                        <h5><a href="#">Menu OPtion</a></h5>
-                        <h5><a href="#">Menu OPtion</a></h5>
+                        <div class="filters">
+                            <h5>Navigation Header</h5>
+                            <div class="input-group">
+                              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                              <span class="input-group-addon"><i class=" glyphicon glyphicon-search"></i></span>
+                            </div>
+                            <ul>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                            </ul>
+                        </div>
+                        <div class="filters">
+                            <h5>Navigation Header</h5>
+                            <div class="input-group">
+                              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                              <span class="input-group-addon"><i class=" glyphicon glyphicon-search"></i></span>
+                            </div>
+                            <ul>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                                <li><span class="fa fa-check-square"></span> Filter</li>
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
 
 
-                <div class="col-md-9 col-sm-8 profile-view">
+                <div class="col-md-9 col-sm-8 filter-view">
+                    <h4 class="matching-results">Matching Results: 23</h4>
                     <div class="cards row">
                         <div class="date hidden-sm hidden-xs">
                             <h2>07</h2>
