Added conference page

--- a/app/search.html
+++ b/app/search.html
@@ -123,7 +123,7 @@
                             <p><b>Location : </b>Mangalore, Karnataka</p>
                             <p class='hidden-md hidden-lg'><b>Paper Date: </b>7th March</p>
                             <p class='col-md-9'><b>Conference Date: </b>29th March - 1st April</p>
-                            <p class='col-md-3 view-details'><a href="#">View Details <span class="fa fa-long-arrow-right"></span></a></p>
+                            <p class='col-md-3 view-details'><a href="conference.html">View Details <span class="fa fa-long-arrow-right"></span></a></p>
                         </div>
                     </div>
                 </div>
